# esp32_s3-rt

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
Bus/: CMakeLists.txt
Bus/Ble/: ble_gatt.c
Bus/I2C/: I2c_ctrl.c
Bus/include/: I2c_ctrl.h  ble_gatt.h
components/gSensor/: CMakeLists.txt  drv_MPU6050.c
components/gSensor/include/: drv_MPU6050.h
components/gSesnor/: CMakeLists.txt  drv_MPU6050.c
components/gSesnor/include/: drv_MPU6050.h
components/oled/: CMakeLists.txt  drv_oled.c
components/oled/include/: drv_oled.h  font.h
main/: CMakeLists.txt  app_main.c  app_task.c
main/include/: app_task.h
utils/: CMakeLists.txt  queueManager.c
utils/include/: queueManager.h
